# szxComp

./: .gitignore  AsgNode.cpp  AsgNode.h  CMakeLists.txt  Interpreter.cpp  Interpreter.h  Kompilator.cpp  Kompilator.h  LICENSE  Lexer.cpp  Lexer.h  Node.h  NumNode.cpp  NumNode.h  OpNode.cpp  OpNode.h  Parser.cpp  Parser.h  PrintNode.cpp  PrintNode.h  README.md  SeqNode.cpp  SeqNode.h  VarNode.cpp  VarNode.h  main.cpp
